--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -42,6 +42,7 @@ CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_PROFILING=y
 CONFIG_ARCH_HISI=y
 CONFIG_ARCH_QCOM=y
+CONFIG_ARCH_VEXPRESS=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=32
 CONFIG_SECCOMP=y
@@ -214,6 +215,7 @@ CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
 # CONFIG_ALLOW_DEV_COREDUMP is not set
 CONFIG_DEBUG_DEVRES=y
+# CONFIG_VEXPRESS_CONFIG is not set
 CONFIG_GNSS=y
 CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP=y
@@ -274,7 +276,7 @@ CONFIG_USB_USBNET=y
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
-# CONFIG_INPUT_MOUSE is not set
+# CONFIG_MOUSE_PS2 is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
