ANDROID: enable MTE support in GKI config

--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -12,7 +12,6 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_IKHEADERS=y
 CONFIG_UCLAMP_TASK=y
 CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_UCLAMP_TASK_GROUP=y
@@ -53,6 +52,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
+CONFIG_ARM64_MTE=y
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_DMI is not set
 CONFIG_PM_WAKELOCKS=y
